# tdlr

./: .env.example  .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
docs/: install.md  upload.md
install/: install.ps1  install.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/args/: auth.rs  mod.rs  root.rs  upload.rs
src/commands/: hello.rs  mod.rs  version.rs
src/commands/auth/: logout.rs  mod.rs  status.rs
src/commands/auth/login/: add.rs  list.rs  mod.rs  remove.rs  use_account.rs
src/commands/upload/: expr.rs  file.rs  handler.rs  mod.rs  output.rs  upload.rs
src/telegram/: mod.rs
src/telegram/auth/: mod.rs  phone.rs  qrcode.rs
src/telegram/client/: instance.rs  mod.rs  pool.rs
src/telegram/session/: account.rs  active.rs  manager.rs  mod.rs
src/telegram/upload/: chat.rs  group.rs  mime.rs  mod.rs  single.rs
src/utils/: mod.rs
