[package]
name = "tdlr"
version = "0.1.0"
edition = "2021"
description = "TDLR - A modular Rust CLI application"

[[bin]]
name = "tdlr"
path = "src/main.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env", "color"] }
colored = "2.1"
evalexpr = "11.3"
anyhow = "1.0.100"
grammers-client = { version = "0.8.1", features = ["html"] }
grammers-session = "0.8.0"
grammers-mtsender = "0.8.1"
grammers-tl-types = "0.8.0"
tokio = { version = "1.48.0", features = ["full"] }
qrcode = "0.14.1"
base64-url = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
futures = "0.3"
